--- a/index.html
+++ b/index.html
@@ -2,31 +2,43 @@
 <html>
   <head>
     <link rel="stylesheet" href="./css/style.css" />
-    <title>YOUR NAME</title>
+    <title>Ava Zhang</title>
     <meta name="description" content="some desc">
   </head>
-
+ 
   <body>
     <header class="main-header">
       <br>
-      <h1 class="my-name my-name-large">YOUR NAME</h1>
+      <h1 class="my-name my-name-large">Ava Zhang</h1>
     </header>
     <br><br><br>
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
-      <img class="about-prof-image" src="./assets/profile.png" height="200">
-      <p> INTRODUCE YOURSELF
-
-      </p>
-
+      <img class="about-prof-image" src="./assets/DSC_5558.JPG" height="200">
       <p>
-        Relevant Info
+        Hi!  I am Ava Zhang, a UMD sophomore and computer science major!  I'm also minoring in ACES.
       </p>
-
+ 
       <p>
-        your interests
+        I will be interning at Amazon Web Services this upcoming 2022 summer.
       </p>
-
+ 
+      <p>
+        Aside from learning new programming, I'm interested in digital art and swimming!
+      </p>
+ 
+      <br><br><br><br><br><br><br><br><br><br><br>
+    </section>
+    <section class="content-section container">
+      <h2 class="section-header">Contact Information</h2>
+      <p>
+        Phone Number: 240-558-8337
+      </p>
+ 
+      <p>
+        Email: avazhang02@gmail.com
+      </p>
+ 
       <br><br><br><br><br><br><br><br><br><br><br>
     </section>
     <br>
@@ -35,15 +47,15 @@
         <ul class="nav footer-nav">
           <li>
             <!-- YOUR GITHUB -->
-            <a href="https://github.com/" target="_blank">
+            <a href="https://github.com/azhang-github/" target="_blank">
               <img class="sm-logo" src="./assets/githubwhite.png" height="50" width="50">
             </a>
           </li>
           <li>
             <!-- YOUR LINKEDIN -->
-            <a href="https://www.linkedin.com/" target="_blank">
+            <a href="https://www.linkedin.com/in/ava-zhang-5b6393202/" target="_blank">
               <img class="sm-logo" src="./assets/linkedinwhite.png" height="50" width="50">
-
+ 
             </a>
           </li>
           <li>
@@ -51,14 +63,15 @@
               <img src="./assets/umd-logo.png" height="34" width="195">
             </a>
           </li>
-
+ 
         </ul>
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script type="text/javascript" src="./js/script.js"></script>  
   </body>
-	
-  
-
+ 
+ 
+ 
 </html>
+ 
