--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <section class="content-section container">
       <h2 class="section-header">About Me</h2>
       <img class="about-prof-image" src="./assets/DSC_5558.JPG" height="200">
-      <p>
+      <p>test deployment
         Hi!  I am Ava Zhang, a UMD sophomore and computer science major!  I'm also minoring in ACES.
       </p>
  
